--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -18,7 +18,7 @@
     "strict": true,
     "paths": {
       "@/*": ["./*"],
-      "@tmp/*": ["./pages/.umi/*"]
+      "@@/*": ["src/page/.umi/*"]
     }
   },
   "exclude": [
